version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Body.rst.txt
.. vale off



:class:`Body`
=============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Body(internalObject: Any)
              Body(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a Body.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Body

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddCommandSnippet`
            - Creates a new CommandSnippet
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddPythonCodeEventBased`
            - Creates a new PythonCodeEventBased
          * - :py:attr:`~ClearGeneratedData`
            - Run the ClearGeneratedData action.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GenerateMesh`
            - Run the GenerateMesh action.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEngineeringDataMaterial`
            - Returns the C# Engineering Data Object that the Material is using internally to keep data
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetGeoBody`
            - Gets the Geo Body
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetMeshMetricQuantityName`
            - GetMeshMetricQuantityName method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPart`
            - GetPart method.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PreviewInflation`
            - Run the PreviewInflation action.
          * - :py:attr:`~PreviewSurfaceMesh`
            - Run the PreviewSurfaceMesh action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~ShowBody`
            - Run the ShowBody action.
          * - :py:attr:`~Update`
            - Run the Update action.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Assignment`
            - Gets or sets the Assignment.
          * - :py:attr:`~Average`
            - Gets the Average.
          * - :py:attr:`~BeamSection`
            - Gets the BeamSection.
          * - :py:attr:`~Behavior`
            - Gets or sets the Behavior.
          * - :py:attr:`~BrickIntegrationScheme`
            - Gets or sets the BrickIntegrationScheme.
          * - :py:attr:`~CentroidX`
            - Gets the CentroidX.
          * - :py:attr:`~CentroidY`
            - Gets the CentroidY.
          * - :py:attr:`~CentroidZ`
            - Gets the CentroidZ.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Color`
            - Gets or sets the Color, encoded as a BGR bitfield.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ConfigurationId`
            - Gets the related Result Mesh's ConfigurationId.
          * - :py:attr:`~CoordinateSystem`
            - Gets or sets the CoordinateSystem.
          * - :py:attr:`~CrossSectionArea`
            - Gets the CrossSectionArea.
          * - :py:attr:`~CrossSectionIYY`
            - Gets the CrossSectionIYY.
          * - :py:attr:`~CrossSectionIZZ`
            - Gets the CrossSectionIZZ.
          * - :py:attr:`~CrossSectionName`
            - Gets CrossSectionName.
          * - :py:attr:`~CrossSectionSelection`
            - Gets or sets the CrossSectionSelection.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DegeneratedShape`
            - Gets or sets the DegeneratedShape.
          * - :py:attr:`~Dimension`
            - Gets or sets the Dimension.
          * - :py:attr:`~Elements`
            - Gets the Elements.
          * - :py:attr:`~FiberAngle`
            - Gets or sets the FiberAngle.
          * - :py:attr:`~FiberCrossSectionArea`
            - Gets or sets the FiberCrossSectionArea.
          * - :py:attr:`~FiberSpacing`
            - Gets or sets the FiberSpacing.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FluidCrossArea`
            - Gets or sets the FluidCrossArea.
          * - :py:attr:`~FluidDiscretization`
            - Gets or sets the FluidDiscretization.
          * - :py:attr:`~FluidSolidPhase`
            - Gets or sets the FluidSolidPhase.
          * - :py:attr:`~GeometryType`
            - Gets the GeometryType.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~Hidden`
            - Hide or show the body.
          * - :py:attr:`~HomogeneousMembrane`
            - Gets or sets the HomogeneousMembrane.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImportableObjectSourceId`
            - ImportableObjectSourceId property.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~IsVirtual`
            - IsVirtual property.
          * - :py:attr:`~IsWindingBody`
            - Gets the IsWindingBody.
          * - :py:attr:`~Length`
            - Gets the Length.
          * - :py:attr:`~LengthX`
            - Gets the LengthX.
          * - :py:attr:`~LengthY`
            - Gets the LengthY.
          * - :py:attr:`~LengthZ`
            - Gets the LengthZ.
          * - :py:attr:`~LinkTrussBehavior`
            - Gets or sets the LinkTrussBehavior.
          * - :py:attr:`~ManualThicknessMode`
            - Gets the ManualThicknessMode.
          * - :py:attr:`~Mass`
            - Gets the Mass.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaterialPolarizationDirection`
            - Gets or sets the MaterialPolarizationDirection.
          * - :py:attr:`~Maximum`
            - Gets the Maximum.
          * - :py:attr:`~MeshMetric`
            - Gets the MeshMetric.
          * - :py:attr:`~MeshVersion`
            - Gets the MeshVersion.
          * - :py:attr:`~Minimum`
            - Gets the Minimum.
          * - :py:attr:`~ModelType`
            - Gets or sets the ModelType.
          * - :py:attr:`~MomentOfInertiaIp1`
            - Gets the MomentOfInertiaIp1.
          * - :py:attr:`~MomentOfInertiaIp2`
            - Gets the MomentOfInertiaIp2.
          * - :py:attr:`~MomentOfInertiaIp3`
            - Gets the MomentOfInertiaIp3.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~Nodes`
            - Gets the Nodes.
          * - :py:attr:`~NonlinearEffects`
            - Gets or sets the NonlinearEffects.
          * - :py:attr:`~NumberOfTurns`
            - Gets or sets the NumberOfTurns.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~OffsetMode`
            - Gets or sets the OffsetMode.
          * - :py:attr:`~OffsetType`
            - Gets or sets the OffsetType.
          * - :py:attr:`~OffsetX`
            - Gets or sets the OffsetX.
          * - :py:attr:`~OffsetY`
            - Gets or sets the OffsetY.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~PipeExternalDiameter`
            - Gets the PipeExternalDiameter.
          * - :py:attr:`~PipeInternalDiameter`
            - Gets the PipeInternalDiameter.
          * - :py:attr:`~PipeThickness`
            - Gets the PipeThickness.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~ReferenceFrame`
            - Gets or sets the ReferenceFrame.
          * - :py:attr:`~ReferenceTemperature`
            - Gets or sets the ReferenceTemperature.
          * - :py:attr:`~ReferenceTemperatureValue`
            - Gets or sets the ReferenceTemperatureValue.
          * - :py:attr:`~ReinforcingStressState`
            - Gets or sets the ReinforcingStressState.
          * - :py:attr:`~ResultMeshId`
            - Gets the related Result Mesh's ObjectId.
          * - :py:attr:`~ShellOffsetType`
            - Gets or sets the ShellOffsetType.
          * - :py:attr:`~StandardDeviation`
            - Gets the StandardDeviation.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StiffnessBehavior`
            - Gets or sets the StiffnessBehavior.
          * - :py:attr:`~StiffnessOption`
            - Gets or sets the StiffnessOption.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~SuppressedParameterized`
            - Gets if the part suppressed property is parameterized.
          * - :py:attr:`~SurfaceArea`
            - Gets the SurfaceArea.
          * - :py:attr:`~ThermalStrainEffects`
            - Gets or sets the ThermalStrainEffects.
          * - :py:attr:`~Thickness`
            - Gets or sets the Thickness.
          * - :py:attr:`~ThicknessMode`
            - Gets the ThicknessMode.
          * - :py:attr:`~TransferableObjectId`
            - TransferableObjectId property.
          * - :py:attr:`~Transparency`
            - Gets or sets the Transparency. Values range from 0.0 (fully invisible) to 1.0 (fully visible).
          * - :py:attr:`~Treatment`
            - Gets or sets the Treatment.
          * - :py:attr:`~UseReferenceTemperatureByBody`
            - Gets or sets the UseReferenceTemperatureByBody.
          * - :py:attr:`~UserNameChange`
            - Gets the UserNameChange.
          * - :py:attr:`~Visible`
            - Gets or sets the Visible.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~Volume`
            - Gets the Volume.







Property detail
---------------
.. py:property:: Assignment
   :type: Optional[str]


   
   Gets or sets the Assignment.
















   ..
       !! processed by numpydoc !!

.. py:property:: Average
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Average.
















   ..
       !! processed by numpydoc !!

.. py:property:: BeamSection
   :type: Optional[Ansys.ACT.Automation.Mechanical.DataModelObject]


   
   Gets the BeamSection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Behavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Model2DBehavior]


   
   Gets or sets the Behavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: BrickIntegrationScheme
   :type: Optional[Ansys.Mechanical.DataModel.Enums.BrickIntegrationScheme]


   
   Gets or sets the BrickIntegrationScheme.
















   ..
       !! processed by numpydoc !!

.. py:property:: CentroidX
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CentroidX.
















   ..
       !! processed by numpydoc !!

.. py:property:: CentroidY
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CentroidY.
















   ..
       !! processed by numpydoc !!

.. py:property:: CentroidZ
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CentroidZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Color
   :type: Optional[int]


   
   Gets or sets the Color, encoded as a BGR bitfield.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConfigurationId
   :type: Optional[int]


   
   Gets the related Result Mesh's ConfigurationId.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystem
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]


   
   Gets or sets the CoordinateSystem.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrossSectionArea
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CrossSectionArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrossSectionIYY
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CrossSectionIYY.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrossSectionIZZ
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the CrossSectionIZZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrossSectionName
   :type: Optional[str]


   
   Gets CrossSectionName.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrossSectionSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.CrossSection]


   
   Gets or sets the CrossSectionSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DegeneratedShape
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DegeneratedShape]


   
   Gets or sets the DegeneratedShape.
















   ..
       !! processed by numpydoc !!

.. py:property:: Dimension
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ShellBodyDimension]


   
   Gets or sets the Dimension.
















   ..
       !! processed by numpydoc !!

.. py:property:: Elements
   :type: Optional[int]


   
   Gets the Elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberAngle
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the FiberAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberCrossSectionArea
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the FiberCrossSectionArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: FiberSpacing
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the FiberSpacing.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FluidCrossArea
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the FluidCrossArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: FluidDiscretization
   :type: Optional[Ansys.Mechanical.DataModel.Enums.FluidDiscretizationType]


   
   Gets or sets the FluidDiscretization.
















   ..
       !! processed by numpydoc !!

.. py:property:: FluidSolidPhase
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PhaseType]


   
   Gets or sets the FluidSolidPhase.
















   ..
       !! processed by numpydoc !!

.. py:property:: GeometryType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.GeometryType]


   
   Gets the GeometryType.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Hidden
   :type: Optional[bool]


   
   Hide or show the body.
















   ..
       !! processed by numpydoc !!

.. py:property:: HomogeneousMembrane
   :type: Optional[bool]


   
   Gets or sets the HomogeneousMembrane.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportableObjectSourceId
   :type: Optional[str]


   
   ImportableObjectSourceId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSPrototypeAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsVirtual
   :type: Optional[bool]


   
   IsVirtual property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsWindingBody
   :type: Optional[bool]


   
   Gets the IsWindingBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: Length
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Length.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthX
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the LengthX.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthY
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the LengthY.
















   ..
       !! processed by numpydoc !!

.. py:property:: LengthZ
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the LengthZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: LinkTrussBehavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PrototypeLinkBehavior]


   
   Gets or sets the LinkTrussBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: ManualThicknessMode
   :type: Optional[bool]


   
   Gets the ManualThicknessMode.
















   ..
       !! processed by numpydoc !!

.. py:property:: Mass
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Mass.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]


   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialPolarizationDirection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MaterialPolarizationDirection]


   
   Gets or sets the MaterialPolarizationDirection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Maximum
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Maximum.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshMetric
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MeshMetricType]


   
   Gets the MeshMetric.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshVersion
   :type: Optional[int]


   
   Gets the MeshVersion.
















   ..
       !! processed by numpydoc !!

.. py:property:: Minimum
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Minimum.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModelType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.PrototypeModelType]


   
   Gets or sets the ModelType.
   Note: ModelType is applicable to line bodies and surface bodies only.
















   ..
       !! processed by numpydoc !!

.. py:property:: MomentOfInertiaIp1
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MomentOfInertiaIp1.
















   ..
       !! processed by numpydoc !!

.. py:property:: MomentOfInertiaIp2
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MomentOfInertiaIp2.
















   ..
       !! processed by numpydoc !!

.. py:property:: MomentOfInertiaIp3
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the MomentOfInertiaIp3.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Nodes
   :type: Optional[int]


   
   Gets the Nodes.
















   ..
       !! processed by numpydoc !!

.. py:property:: NonlinearEffects
   :type: Optional[bool]


   
   Gets or sets the NonlinearEffects.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfTurns
   :type: Optional[int]


   
   Gets or sets the NumberOfTurns.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetMode
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AutomaticOrManual]


   
   Gets or sets the OffsetMode.
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.BeamOffsetType]


   
   Gets or sets the OffsetType.
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetX
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the OffsetX.
















   ..
       !! processed by numpydoc !!

.. py:property:: OffsetY
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the OffsetY.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PipeExternalDiameter
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the PipeExternalDiameter.
















   ..
       !! processed by numpydoc !!

.. py:property:: PipeInternalDiameter
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the PipeInternalDiameter.
















   ..
       !! processed by numpydoc !!

.. py:property:: PipeThickness
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the PipeThickness.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]


   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReferenceFrame
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ReferenceFrameType]


   
   Gets or sets the ReferenceFrame.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReferenceTemperature
   :type: Optional[bool]


   
   Gets or sets the ReferenceTemperature.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReferenceTemperatureValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ReferenceTemperatureValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReinforcingStressState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ReinforcingStressState]


   
   Gets or sets the ReinforcingStressState.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultMeshId
   :type: Optional[int]


   
   Gets the related Result Mesh's ObjectId.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShellOffsetType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ShellOffsetType]


   
   Gets or sets the ShellOffsetType.
















   ..
       !! processed by numpydoc !!

.. py:property:: StandardDeviation
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the StandardDeviation.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StiffnessBehavior
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StiffnessBehavior]


   
   Gets or sets the StiffnessBehavior.
















   ..
       !! processed by numpydoc !!

.. py:property:: StiffnessOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ShellElementStiffnessOption]


   
   Gets or sets the StiffnessOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: SuppressedParameterized
   :type: Optional[bool]


   
   Gets if the part suppressed property is parameterized.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceArea
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the SurfaceArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThermalStrainEffects
   :type: Optional[bool]


   
   Gets or sets the ThermalStrainEffects.
















   ..
       !! processed by numpydoc !!

.. py:property:: Thickness
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the Thickness.
















   ..
       !! processed by numpydoc !!

.. py:property:: ThicknessMode
   :type: Optional[bool]


   
   Gets the ThicknessMode.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferableObjectId
   :type: Optional[str]


   
   TransferableObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Transparency
   :type: Optional[float]


   
   Gets or sets the Transparency. Values range from 0.0 (fully invisible) to 1.0 (fully visible).
















   ..
       !! processed by numpydoc !!

.. py:property:: Treatment
   :type: Optional[Ansys.Mechanical.DataModel.Enums.BodyTreatment]


   
   Gets or sets the Treatment.
















   ..
       !! processed by numpydoc !!

.. py:property:: UseReferenceTemperatureByBody
   :type: Optional[bool]


   
   Gets or sets the UseReferenceTemperatureByBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: UserNameChange
   :type: Optional[bool]


   
   Gets the UserNameChange.
















   ..
       !! processed by numpydoc !!

.. py:property:: Visible
   :type: Optional[bool]


   
   Gets or sets the Visible.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: Volume
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets the Volume.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddCommandSnippet() -> Ansys.ACT.Automation.Mechanical.CommandSnippet

   
   Creates a new CommandSnippet

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddPythonCodeEventBased() -> Ansys.ACT.Automation.Mechanical.PythonCodeEventBased

   
   Creates a new PythonCodeEventBased

   ..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Run the ClearGeneratedData action.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateMesh() -> None

   
   Run the GenerateMesh action.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEngineeringDataMaterial() -> Any

   
   Returns the C# Engineering Data Object that the Material is using internally to keep data

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetGeoBody() -> Ansys.ACT.Interfaces.Geometry.IGeoBody

   
   Gets the Geo Body 

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshMetricQuantityName(obj: Ansys.Common.Interop.DSObjectsAuto.IDSPrototypeAuto) -> str

   
   GetMeshMetricQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPart() -> Ansys.Common.Interop.DSPartMgr.IPmPart

   
   GetPart method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PreviewInflation() -> None

   
   Run the PreviewInflation action.

   ..
       !! processed by numpydoc !!

.. py:method:: PreviewSurfaceMesh() -> None

   
   Run the PreviewSurfaceMesh action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: ShowBody() -> None

   
   Run the ShowBody action.

   ..
       !! processed by numpydoc !!

.. py:method:: Update() -> None

   
   Run the Update action.

   ..
       !! processed by numpydoc !!



.. vale on